--- a/css/styles.css
+++ b/css/styles.css
@@ -72,7 +72,8 @@ hr {
 /* classes */
 .student-name {
     font-size: 2em;
-    padding-top: 2em;
+    padding-top: 45px;
+    padding: 1em;
 }
 
 .wrapper {
@@ -116,6 +117,7 @@ hr {
 
 .container {
     margin: auto;
+    
 	
 }
 
@@ -277,6 +279,8 @@ hr {
 
     .student-name {
         float: left;
+        margin: auto;
+        padding-left: 20px;
     }
 
     .wrapper {
@@ -285,6 +289,8 @@ hr {
     }
 
     .main-nav {
+        width: 50%;
+        height: 100px;
         float: right;
         text-align: right;
     }
