--- a/css/styles.css
+++ b/css/styles.css
@@ -246,7 +246,7 @@ hr {
     }
     .portfolio-item,
     .col {
-        float: inline;
+        float: left;
         width: 50%;
         padding: 1em;
     }
@@ -307,7 +307,7 @@ hr {
 
     .portfolio-item,
     .col {
-        float: inline;
+        float: left;
         width: 33%;
         padding: 1em;
     }
