--- a/css/styles.css
+++ b/css/styles.css
@@ -1,8 +1,3 @@
-
-/* web font */
-
-@import url('https://fonts.googleapis.com/css?family=Roboto:300,300i,400,400i,700,700i,900,900i&display=swap');
-
 /* CSS document */
 * {
     box-sizing: border-box;
@@ -162,7 +157,6 @@ hr {
 .main-footer {
     text-align: center;
 	padding: 1em;
-
 }
 
 
@@ -174,10 +168,12 @@ hr {
 
 .footer-name {
     float: left;
+    font-size: .75em;
 }
 
 .footer-anchor {
     float: right;
+    font-size: .75em;
 }
 
 .footer-anchor a {
@@ -255,6 +251,13 @@ hr {
         margin: 0 auto;
     }
 
+    .footer-name {
+        font-size: 1em;
+    }
+
+    .footer-anchor {
+        font-size: 1em;
+    }
 
 
     .footer-nav,
@@ -271,6 +274,7 @@ hr {
 
     .footer-anchor {
         display: none;
+    
     }
 
 }
